docs: 특정 수신자 조회 swagger api 이동
